--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^5.0.0",
     "magic-sdk": "^13.3.1",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.0",
     "moralis": "^2.14.2",
     "moralis-v1": "^1.12.0",
     "next": "^13.1.6",
